[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beamtimedb"
dynamic = ["version"]
dependencies = [
    "pyepics>=3.5.6",
    "asteval>=1.0.6",
    "sqlalchemy>=2.0",
    "sqlalchemy_utils",
    "psycopg2",
]

requires-python = ">= 3.10"
authors = [
    {name = "Matthew Newville", email = "newville@cars.uchicago.edu"},
]
description = "Beamtime Database for GSECARS/SEES"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data collection, data acquisition"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/seescience/beamtimedb"
Documentation = "https://github.com/seescience/beamtimedb"

[project.optional-dependencies]
dev = ["build", "twine"]
doc = ["Sphinx"]
apsbss = ["apsbss"]
all = ["beamtimedb[dev, doc, apsbss]"]

[tool.setuptools.packages.find]
include = ["beamtimedb"]

[tool.setuptools_scm]
write_to = "beamtimedb/version.py"
version_scheme = "post-release"
